# soulprout-agent

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md
.github/workflows/: gateway-release.yml
agent/: .env.example  .model.json.example  README.en.md  README.md  duckducktest.py  main.py  requirements.txt
agent/core/: config.py
agent/kb/: router.py
agent/services/: agent.py  asr.py  auth.py  blueprint.py  compress.py  email_service.py  memory.py  prompt.py  rokid.py
agent/skill/: __init__.py  manager.py  skill_indexer.py  skill_server.py
agent/tool/: __init__.py  registry.py  tools.py
agent/utils/: calculate_user.py  jwt_utils.py  llm.py  vdb_client.py
deploy/: install.sh  sandbox.sh  start.sh  stop.sh
deploy/lib/: common.sh
deploy/milvus/: docker-compose.yml
gateway/: .env.example  __init__.py  base.py  chat_caller.py  config_store.py  main.py  requirements.txt  web.py
gateway-app/: README.md  package-lock.json  package.json
gateway-app/scripts/: build.ps1  generate-icons.py
gateway-app/src-tauri/: Cargo.toml  tauri.conf.json
gateway-app/src-tauri/icons/: icon.icns
gateway-app/src-tauri/src/: lib.rs  main.rs
gateway/static/: feishu.html  i18n.js  index.html  rokid.html  wecom.html  weixin.html  xiaoai.html
gateway_data/: settings.json
gateway_data/weixin/: 40cbb5a64d22@im.bot.context-tokens.json  40cbb5a64d22@im.bot.json  40cbb5a64d22@im.bot.sync.json  4bedf4db21e6@im.bot.context-tokens.json  (+7 more)
vdb/: .env.example  main.py  requirements.txt
web/: index.html  package-lock.json  package.json  vite.config.js
(+134 files in other folders)
