[package]
name = "soulprout-gateway"
version = "0.1.0"
description = "Soulprout Gateway Desktop App"
authors = ["Soulprout"]
edition = "2021"

[lib]
name = "soulprout_gateway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "soulprout-gateway"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
